<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/action_start"
        android:title="@string/action_start"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_stop"
        android:title="@string/action_stop"
        android:icon="@drawable/ic_baseline_pause_24"
        android:visible="false"
        app:showAsAction="ifRoom"/>


    <item android:id="@+id/action_one"
        android:title="@string/action_diff"
        app:showAsAction="never"/>

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <item android:id="@+id/action_difficulty_help"
        android:title="@string/action_difficulty_help"
        app:showAsAction="never"/>

</menu>